Prevent navbar from wrapping in Chrome.

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -40,8 +40,23 @@ ul:not(.navbar-right):not(.navbar-left).navbar-nav.nav {
   margin-left: 0.25em;
 }
 
+.nav > li > a {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .user-button {
-  max-width: 10em;
+  max-width: 5em;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+}
+
+.login-link-text {
+  display: inline-block;
+  width: 10em;
+  height: 1.2em;
+  white-space: nowrap;
+  vertical-align: middle;
   overflow-x: hidden;
   text-overflow: ellipsis;
 }
